chore: Update baseURL in hugo.toml to use new domain

--- a/public/index.html
+++ b/public/index.html
@@ -304,6 +304,12 @@
     
 </h1>
 <p>Test page!</p>
+<p>
+  <figure>
+    <img class="my-0 rounded-md" loading="lazy" src="https://github.com/user-attachments/assets/ff885731-c628-4335-82d7-e28cc66a3963" alt="test image" />
+    
+  </figure>
+</p>
 </section>
 </article>
 <section>
